# ciz.im

./: .gitignore  Caddyfile  README.md  SOCKET_API_SPEC.txt  app.py  docker-compose.yml  extensions.py  game_manager.py  main.py  models.py  pyproject.toml  socket_events.py  test_client.py  test_client_admin.py  test_client_user.py  testuser2.py
src/: models.py
static/: game.js  script.js  style.css
templates/: index.html
