[project]
name = "sen4015-project"
version = "0.1.0"
description = "A real-time drawing and guessing game built with Flask and SocketIO, inspired by games like Gartic.io"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gunicorn>=23.0.0",
]
