[project]
name = "ciz.im"
version = "1.0.0"
description = "A real-time drawing and guessing game built with Flask and SocketIO, inspired by games like Gartic.io"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
]
